// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ReplyToCommentButton default 1`] = `
<a
  className="action-reply"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="custom-overlay"
  >
    <div
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="assembl-icon-back-arrow"
      />
    </div>
  </div>
</a>
`;

exports[`Storyshots ReplyToCommentButton disabled 1`] = `
<a
  className="action-reply disabled"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="custom-overlay"
  >
    <div
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="assembl-icon-back-arrow"
      />
    </div>
  </div>
</a>
`;
